--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -90,7 +90,7 @@
         {% block PartialFooter %}
         {% endblock %}
 
-
+        {{ urls }}
     </div>
 
     {% if basket is not defined %}
