--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -89,8 +89,10 @@
 
         {% block PartialFooter %}
         {% endblock %}
-
-        {{ templateEvent }}
+        <div class=bbbb"">
+        {% set templateeeee = services.template.isSearch() %}
+        {{ templateeeee }}
+        </div>
     </div>
 
     {% if basket is not defined %}
