--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -79,7 +79,7 @@
                     <!-- inject content of inherited templates here -->
                 {% endblock %}
             {% else %}
-
+                {{ templateEvent }}
                     {% include "BlueBerry::PageDesign.Partials.Homepage" %}
 
             {% endif %}
