--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -81,7 +81,7 @@
             {% else %}
                 {% set templateLoaddd = templateEvent %}
 
-                {% if templateLoaddd == 'tpl.password-reset' %}
+                {% if templateLoaddd == "tpl.password-reset" %}
 
                 {% else %}
                 {% include "BlueBerry::PageDesign.Partials.Homepage" %}
