--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -80,12 +80,12 @@
                 {% endblock %}
             {% else %}
                 {% set templateLoaddd = templateEvent %}
-
-                {% if templateLoaddd == "tpl.password-reset" %}
-
+                {% if templateLoaddd == 'tpl.password-reset' %}
+                    {% block PageBody %}
+                        <!-- inject content of inherited templates here -->
+                    {% endblock %}
                 {% else %}
-                {% include "BlueBerry::PageDesign.Partials.Homepage" %}
-
+                    {% include "BlueBerry::PageDesign.Partials.Homepage" %}
                 {% endif %}
             {% endif %}
         </div>
