--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -93,6 +93,7 @@
                 {% if itemList is not empty %}
 	                <ul class="product-list row grid">
 	                    {% for item in itemList %}
+                            {% set item.data.prices.rrp.unitPrice.value = item.data.prices.rrp.data.basePrice %}
                             {% set discountNew = 100 - ((item.data.prices.default.price.value * 100) / item.data.prices.rrp.data.basePrice) %}
 	                        <li class="col-12  col-sm-6 col-md-4 col-lg-{% if category is defined and ceresConfig.header.showNavBars in ["side", "both"] %}4{% else %}3{% endif %}">
                                 {% if item.data.prices.rrp and item.data.prices.rrp.data.basePrice > 0 and item.data.prices.rrp.data.basePrice > item.data.prices.default.price.value and item.data.prices.default.price.value > 0 %}
