--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -100,6 +100,7 @@
     </article>
 </script>
 <script>
+import Vue from "vue";
 Vue.component("item-store-special", {
 
     delimiters: ["${", "}"],
