--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -272,7 +272,9 @@
 </script>
 
 <script>
-
+import { isNullOrUndefined, isDefined } from "../../helper/utils";
+import TranslationService from "../../services/TranslationService";
+import Vue from "vue";
 Vue.component("item-store-special", {
 
     delimiters: ["${", "}"],
