--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -101,7 +101,13 @@
                                 <category-item
 	                                item-data-ref="{{ item.data | json_data }}"
 	                                :decimal-count="{{ ceresConfig.item.storeSpecial }}">
-	                                <template #before-prices>{{ LayoutContainer.show("Ceres::CategoryItem.BeforePrices", item.data) }}</template>
+
+                                    <template #before-prices>
+                                        {% if item.data.prices.rrp and item.data.prices.rrp.data.basePrice > 0 and item.data.prices.rrp.data.basePrice > item.data.prices.default.price.value and item.data.prices.default.price.value > 0 %}
+                                            <div class="discount-overwrite">- {{ discountNew|round }}%</div>
+                                        {% endif %}
+                                        {{ LayoutContainer.show("Ceres::CategoryItem.BeforePrices", item.data) }}
+                                    </template>
 	                                <template #after-prices>{{ LayoutContainer.show("Ceres::CategoryItem.AfterPrices", item.data) }}</template>
 
 	                                <a href="{{ item.data | itemURL }}" class="small">
