--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -99,7 +99,7 @@
                                     <div class="discount-list small text-muted">{% if item.data.texts.lang == 'en' %}Discount:{% endif %}{% if item.data.texts.lang == 'de' %}Rabatt:{% endif %} {{ discountNew|round }}%</div>
                                 {% endif %}
                                 <script type="text/javascript">
-                                            $( document ).ready(function() {
+                                            $( function(){
                                             console.log('aaaa');
                                             });
                                         </script>
