--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -74,7 +74,7 @@
 
         <div id="page-body" class="main {% if userObjectForTemplate %}user-logged{% else %}user-not-logged{% endif %}">
             {% set templateLoaddd = templateEvent %}
-            {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 or templateLoaddd == 'tpl.password-reset' %}
+            {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 or templateLoaddd == 'tpl.password-reset' or templateLoaddd == 'tpl.register' %}
                 {% block PageBody %}
                     <!-- inject content of inherited templates here -->
                 {% endblock %}
