--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -21,7 +21,7 @@
                                 </a>
                             </li>
                             <li class="other-desc-li">
-                                <a data-toggle="modal" href="#registration">
+                                <a href="https://www.blue-berry.eu/{{ lang }}/register">
                                     <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                 </a>
