--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -14,7 +14,7 @@
                                 <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
                             </a>
                             <span class="pipe"></span>
-                            <a data-toggle="modal">
+                            <a href="https://www.blue-berry.eu/{{ lang }}/register">
                                 <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
                                 <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                             </a>
