--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -8,6 +8,7 @@
 
                 <ul id="controlsList" class="controls-list list-inline">
                     <li class="list-inline-item control-user">
+                        {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 %}
                         <user-login-handler>
                             <a data-toggle="modal">
                                 <i class="mr-1 fa fa-user" aria-hidden="true"></i>
@@ -19,6 +20,8 @@
                                 <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                             </a>
                         </user-login-handler>
+                        {% else %}
+                        {% endif %}
                     </li>
                     <li class="list-inline-item dropdown control-languages">
                         <a data-toggle="collapse" href="#countrySettings" aria-expanded="false"
