--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -284,6 +284,11 @@ h1.price {
     text-align: right;
 }
 
+.page-legal-disclosure hr.my-5 {
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
