--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -293,6 +293,18 @@ h1.price {
     margin-bottom: 0.4rem;
 }
 
+.space10 {
+    height: 10px;
+}
+
+.space20 {
+    height: 20px;
+}
+
+.clear {
+    clear: both;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
