bb-18112019-01- put pagination at bottom

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
+        {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls mb-5 row">
                 <div class="col-12">
                     {% include "Ceres::Category.Item.Partials.Pagination" %}
