bb-18112019-03 put pagination at bottom

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -70,7 +70,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls mb-5 row aaabbb">
                 <div class="col-12">
-                    {% include "Ceres::Category.Item.Partials.Pagination" %}
+                    {% include "BlueBerry::Category.Item.Partials.Pagination" %}
                 </div>
             </div>
         {% endif %}
@@ -126,7 +126,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls mb-5 row aaabbb">
                 <div class="col-12">
-                    {% include "Ceres::Category.Item.Partials.Pagination" %}
+                    {% include "BlueBerry::Category.Item.Partials.Pagination" %}
                 </div>
             </div>
         {% endif %}
