bb-18112019-04 put pagination at bottom

--- a/resources/views/Category/Item/Partials/Pagination.twig
+++ b/resources/views/Category/Item/Partials/Pagination.twig
@@ -6,7 +6,7 @@
     {% set baseURL = urls.myAccount %}
 {% endif %}
 
-<nav class="cmp cmp-paginator row float-right text-center">
+<nav class="cmp cmp-paginator row float-right text-center cccfff">
     {% if pageMax > 1 %}
         <ul class="pagination col-12 m-y-0">
 
