--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -68,7 +68,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
-            <div class="list-controls mb-5 row aaabbb">
+            <div class="list-controls mb-5 row">
                 <div class="col-12">
                     {% include "BlueBerry::Category.Item.Partials.Pagination" %}
                 </div>
@@ -124,7 +124,7 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
-            <div class="list-controls mb-5 row aaabbb">
+            <div class="list-controls mb-5 row">
                 <div class="col-12">
                     {% include "BlueBerry::Category.Item.Partials.Pagination" %}
                 </div>
