bb-19112019-05 put pagination products

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -311,6 +311,13 @@ h1.price {
     margin-left: 5px;
 }
 
+.col-20-percent {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
