--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -352,5 +352,9 @@ h1.price {
         width: 100%;
         padding-right: 15px;
         padding-left: 15px;
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
