--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -1,18 +1,12 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
-{{ component( "Ceres::Customer.Components.UserLoginHandler" ) }}
-{{ component( "Ceres::PageDesign.Components.ShippingCountrySelect" ) }}
-{{ component( "Ceres::PageDesign.Components.MobileNavigation" ) }}
-{{ component( "Ceres::ItemList.Components.ItemSearch" ) }}
-{{ component( "Ceres::WishList.Components.WishListCount" ) }}
-{{ component( "Ceres::Basket.Components.BasketPreviewHover" ) }}
-
-{% set lang = services.sessionStorage.getLang() %}
-{% set enabledRoutes = config("IO.routing.enabled_routes") | split(', ') %}
+{% set lang = services.localizationRepository.getLanguage() %}
 {% set activeCurrencies = config("Ceres.currency.available_currencies") | split(', ') %}
 {% set enableCurrencySelect = config("Ceres.currency.enable_selection") == "true" and activeCurrencies | length > 0 %}
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set currencyFormatSelect = config("Ceres.currency.format_selection") %}
+
+{% set headerContainer = LayoutContainer.show("Ceres::Header") | trim %}
 
 {% include "BlueBerry::PageDesign.Partials.Header.DefaultHeader" %}
 
@@ -30,14 +24,19 @@
     scriptElement.parentElement.removeChild(scriptElement);
 </script>
 
-<div class="aaaa">
+<div class="bbb">
     {% if category.linklist == "Y" %}
         {% set initialCategory = { id: category.id } %}
     {% else %}
         {% set initialCategory = category %}
     {% endif %}
-    <mobile-navigation
-            :initial-category="{{ initialCategory | json_encode }}"
-            template="#vue-mobile-navigation">
-    </mobile-navigation>
+
+    {# set the initialCategory to the default category of the current item #}
+    {% if services.template.isCurrentTemplate("tpl.item") and defaultCategory is not null %}
+        {% set initialCategory = defaultCategory %}
+    {% elseif services.template.isCurrentTemplate('tpl.home.category') %}
+        {% set initialCategory = null %}
+    {% endif %}
+
+    <mobile-navigation :initial-category="{{ initialCategory | json_encode }}" :include-language="{{ urls.includeLanguage | json_encode }}"></mobile-navigation>
 </div>
