--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -2,28 +2,15 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 {% import "Ceres::PageDesign.Macros.Translations" as Translations %}
 {{ component( "Ceres::PageDesign.Components.Notifications" ) }}
-{{ component( "Ceres::Basket.Components.BasketPreview" ) }}
-{{ component( "Ceres::Customer.Components.Login" ) }}
-{{ component( "Ceres::Customer.Components.Registration" ) }}
-{{ component( "Ceres::Basket.Components.AddItemToBasketOverlay" ) }}
 {{ component( "Ceres::PageDesign.Components.Popper" ) }}
 {{ component( "Ceres::Customer.Components.ForgotPassword" ) }}
-{{ component("Ceres::Customer.Components.Contact.AcceptPrivacyPolicyCheck") }}
-
-{# TODO: remove if shop builder pages can be rebuild by migrations #}
-{{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
-{{ component( "Ceres::ItemList.Components.CategoryItem") }}
-{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
-{{ component( "Ceres::PageDesign.Components.Carousel" ) }}
-
-{% set userObjectForTemplate = services.customer.getContact() %}
 
 {% if isShopBuilder %}
     {% include "Ceres::Widgets.WidgetComponents" %}
 {% endif %}
 
 {% set currencyFormat = config("Ceres.currency.format") %}
-{% set defaultLanguage = services.webstoreConfig.getDefaultLanguage() %}
+{% set defaultLanguage = webstoreConfig.defaultLanguage %}
 
 {% if request.get('openBasketPreview') == 1 %}
     {% set openBasketClass = "open-" ~ ceresConfig.basket.previewType %}
@@ -31,9 +18,11 @@
 
 <!DOCTYPE html>
 
-<html lang="{{ lang }}" data-framework="vue" prefix="og: http://ogp.me/ns#">
+<html lang="{{ lang }}" data-framework="vue" prefix="og: http://ogp.me/ns#" class="icons-loading">
 
 <head>
+    {{ get_consent_scripts(ceresConfig.global.blockCookies) }}
+
     {% include getPartial('head') %}
 
     {% block PartialHead %}
@@ -43,6 +32,13 @@
     {% for styleTemplate in get_additional_styles() %}
         {% include styleTemplate.path ignore missing with styleTemplate.params %}
     {% endfor %}
+
+    {% if assetName == 'ceres-checkout' %}
+        {{ LayoutContainer.show("Ceres::Checkout.Styles") }}
+    {% endif %}
+    {% if services.template.getCurrentTemplate() == "tpl.item" %}
+        {{ LayoutContainer.show("Ceres::SingleItem.Styles") }}
+    {% endif %}
 </head>
 
 <body class="{{ bodyClasses | join(' ') }}">
@@ -59,69 +55,51 @@
         document.body.classList.add("no-touch");
     }
 </script>
-<div id="vue-app"{% if openBasketClass is not empty %} class="{{ openBasketClass }}"{% endif %}>
-    <div class="wrapper wrapper-top">
-        <!-- messages -->
-        <notifications template="#vue-notifications" :initial-notifications="{{ notifications | json_encode() }}"></notifications>
-    </div>
+<div id="vue-app" class="app{% if openBasketClass is not empty %} {{ openBasketClass }}{% endif %}">
+    <!-- messages -->
+    <notifications template="#vue-notifications" :initial-notifications="{{ notifications | json_encode() }}"></notifications>
 
-    <div class="wrapper wrapper-left">
-        <!-- filters -->
-    </div>
+    {% include getPartial('header') %}
 
-    <div class="wrapper wrapper-main {% if ceresConfig.header.fixNavBarPos %}isSticky{% endif %}">
-        {% include getPartial('header') %}
-
-        <div id="page-body" class="main {% if userObjectForTemplate %}user-logged{% else %}user-not-logged{% endif %}">
-            {% set templateLoaddd = templateEvent %}
-            {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 or templateLoaddd == 'tpl.password-reset' or templateLoaddd == 'tpl.register' %}
-                {% block PageBody %}
-                    <!-- inject content of inherited templates here -->
-                {% endblock %}
-            {% else %}
-                {% include "BlueBerry::PageDesign.Partials.Homepage" %}
-            {% endif %}
-        </div>
-
-        {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 %}
-            {% include getPartial('footer') %}
+    <div id="page-body" class="main">
+        {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 or templateLoaddd == 'tpl.password-reset' or templateLoaddd == 'tpl.register' %}
+        {% block PageBody %}{% endblock %}
+        {% else %}
+            {% include "BlueBerry::PageDesign.Partials.Homepage" %}
         {% endif %}
-
-        {% block PartialFooter %}
-        {% endblock %}
-
     </div>
 
-    {% if basket is not defined %}
-        {% set basket = services.basket.getBasketForTemplate() %}
-    {% endif %}
-    {% if ceresConfig.basket.previewType == "right" %}
-        <div class="wrapper wrapper-right">
-            <basket-preview :show-net-prices={{ showNetPrices | json_encode }}></basket-preview>
-        </div>
-    {% endif %}
+    {% include getPartial('footer') %}
 
-    <div class="wrapper wrapper-bottom">
-        <!-- LOGIN MODAL -->
-        <div id="login-modal-wrapper">
-            <div class="modal fade login-modal" id="login" tabindex="-1" role="dialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <div class="modal-title h3">{{ trans("Ceres::Template.login") }}</div>
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        </div>
-                        <login modal-element="login-modal-wrapper"></login>
+    {% block PartialFooter %}{% endblock %}
+
+    <!-- LOGIN MODAL -->
+    <div id="login-modal-wrapper">
+        <div class="modal fade login-modal" id="login" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="modal-title h3">{{ trans("Ceres::Template.login") }}</div>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
+                    <lazy-load component="login-modal">
+                        <login modal-element="login-modal-wrapper">
+                            <template #extend-overlay-buttons>
+                                {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
+                            </template>
+                        </login>
+                    </lazy-load>
                 </div>
             </div>
         </div>
-        <!-- ./LOGIN MODAL -->
+    </div>
+    <!-- ./LOGIN MODAL -->
 
-        <!-- REGISTRATION MODAL -->
-        <div id="simple-registration-modal-wrapper">
-            <div class="modal fade" id="registration" tabindex="-1" role="dialog">
-                <div class="modal-dialog">
+    <!-- REGISTRATION MODAL -->
+    <div id="simple-registration-modal-wrapper">
+        <div class="modal fade" id="registration" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <lazy-load component="register-modal">
                     <div class="modal-content">
                         <div class="modal-header">
                             <div class="modal-title h3">
@@ -151,47 +129,66 @@
                             <button type="button" class="close ml-0" data-dismiss="modal" aria-hidden="true">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <registration template="#vue-registration" :is-simple-registration="true" modal-element="simple-registration-modal-wrapper"></registration>
+                            <registration :is-simple-registration="true" modal-element="simple-registration-modal-wrapper">
+                                <template #extend-overlay-buttons>
+                                    {{ LayoutContainer.show("Ceres::RegistrationOverlay.ExtendOverlayButtons") }}
+                                </template>
+                                <template #custom-address-fields>
+                                    {{ LayoutContainer.show("Ceres::Checkout.CustomAddressField") }}
+                                </template>
+                            </registration>
                         </div>
                     </div>
-                </div>
+                </lazy-load>
             </div>
         </div>
-        <!-- ./REGISTRATION MODAL -->
-
-        <!-- BASKET MODAL -->
-        <add-item-to-basket-overlay></add-item-to-basket-overlay>
-        <!-- ./BASKET MODAL -->
-
-        <!-- PASSWORD RESET MODAL -->
-        <forgot-password-modal></forgot-password-modal>
-        <!-- ./PASSWORD RESET MODAL -->
-
-        <!-- SHIPPINGCOSTS MODAL -->
-        {% if ceresConfig.global.shippingCostsCategoryId > 0 %}
-        <div id="shippingscosts-modal-wrapper">
-            <div class="modal fade" id="shippingscosts" tabindex="-1" role="dialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <div class="modal-title h3">{{ trans('Ceres::Template.shippingInfoCosts') }}</div>
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            {% set shopBuilderShippingTemplate = shop_builder_category_template(ceresConfig.global.shippingCostsCategoryId) %}
-                            {% if shopBuilderShippingTemplate | trim is not empty %}
-                                {{ shopBuilderShippingTemplate | raw }}
-                            {% else %}
-                                {% include category_template(ceresConfig.global.shippingCostsCategoryId, lang, webstoreConfig.webstoreId) ignore missing %}
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endif %}
-        <!-- ./SHIPPINGCOSTS MODAL -->
     </div>
+    <!-- ./REGISTRATION MODAL -->
+
+    <!-- BASKET MODAL -->
+    <lazy-load component="add-item-to-basket-overlay">
+        <add-item-to-basket-overlay>
+            <template slot="extendOverlayButtons">
+                {{ LayoutContainer.show("Ceres::Basket.ExtendOverlayButtons") }}
+            </template>
+        </add-item-to-basket-overlay>
+    </lazy-load>
+    <!-- ./BASKET MODAL -->
+
+    <!-- PASSWORD RESET MODAL -->
+    <lazy-load component="forgot-password-modal">
+        <forgot-password-modal :current-template="{{ services.template.getCurrentTemplate() | json_encode }}">
+            <template slot="extendOverlayButtons">
+                {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
+            </template>
+        </forgot-password-modal>
+    </lazy-load>
+    <!-- ./PASSWORD RESET MODAL -->
+
+    <!-- SHIPPINGCOSTS MODAL -->
+    {% if ceresConfig.global.shippingCostsCategoryId > 0 %}
+    <div id="shippingscosts-modal-wrapper">
+        <div class="modal fade" id="shippingscosts" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="modal-title h3">{{ trans('Ceres::Template.shippingInfoCosts') }}</div>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        {% set shopBuilderShippingTemplate = shop_builder_category_template(ceresConfig.global.shippingCostsCategoryId) %}
+                        {% if shopBuilderShippingTemplate | trim is not empty %}
+                            {{ shopBuilderShippingTemplate | raw }}
+                        {% else %}
+                            {% include category_template(ceresConfig.global.shippingCostsCategoryId, lang, webstoreConfig.webstoreId) ignore missing %}
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    <!-- ./SHIPPINGCOSTS MODAL -->
 </div>
 
 <script>
@@ -203,19 +200,26 @@
         isCategoryView: {% if services.template.isCategory() == "1" %}true{% else %}false{% endif %},
         isCheckoutView : {% if services.template.isCheckout() == "1" %}true{% else %}false{% endif %},
         isSearch: {% if services.template.isSearch() == "1" %}true{% else %}false{% endif %},
+        isItemView: {% if services.template.getCurrentTemplate() == "tpl.item" %}true{% else %}false{% endif %},
         templateEvent: "{{ templateEvent }}",
+        templateType: "{{ urls.templateType }}",
         language: "{{ lang }}",
         defaultLanguage: "{{ defaultLanguage }}",
         decimalSeparator: "{{ config("IO.format.separator_decimal") }}",
         urlTrailingSlash: {{ urls.appendTrailingSlash | json_encode }},
+        propertyFileUrl: "{{ services.propertyFile.getPropertyFileUrl() }}",
         isShopBuilder: {{ isShopBuilder | default(false) | json_encode }},
+        bundleSetting: {{ webstoreConfig.dontSplitItemBundle }},
+        initialPleaseSelect: {{ webstoreConfig.attributeSelectDefaultOption }},
+        publicPath: "{{ plugin_path('Ceres') ~ '/js/dist/' }}",
+        isCheapestSorting: "{{ services.template.isCheapestSorting() }}",
         initialData: {
             shippingCountries: {{ services.country.getActiveCountriesList() | filterFields(["id", "currLangName", "isoCode2", "states.id", "states.name"]) | json_encode | raw }},
-            shippingCountryId: {{ services.checkout.getShippingCountryId() | json_encode }}
-        }
+            shippingCountryId: {{ services.checkout.getShippingCountryId() }}
+        },
+        features: {}
     };
 </script>
-
 
 {{ Loader.include_components() }}
 
@@ -226,9 +230,9 @@
 {{ get_json_data() }}
 
 {% if ceresConfig.log.performanceLevel  == 'development' %}
-    <script src="{{ plugin_path('Ceres') }}/js/dist/ceres.js?v={{ buildHash }}"></script>
+    <script src="{{ plugin_path('Ceres') }}/js/dist/{{ assetName }}.js?v={{ buildHash }}"></script>
 {% else %}
-    <script src="{{ plugin_path('Ceres') }}/js/dist/ceres.min.js?v={{ buildHash }}"></script>
+    <script src="{{ plugin_path('Ceres') }}/js/dist/{{ assetName }}.min.js?v={{ buildHash }}"></script>
 {% endif %}
 
 {% for scriptTemplate in get_additional_scripts() %}
@@ -241,7 +245,18 @@
 
 {{ LayoutContainer.show("Ceres::Script.AfterScriptsLoaded") }}
 
+{% if assetName == 'ceres-checkout' %}
+    {{ LayoutContainer.show("Ceres::Checkout.AfterScriptsLoaded") }}
+{% endif %}
+{% if services.template.getCurrentTemplate() == "tpl.item" %}
+    {{ LayoutContainer.show("Ceres::SingleItem.AfterScriptsLoaded") }}
+{% endif %}
+
 <script>
+    window.__loadPluginChunk = function(source) {
+        return source += "?v={{ buildHash }}";
+    };
+
     window.vueEventHub = new Vue();
 
     if (App.config.log.checkSyntax)
