--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -25,15 +25,17 @@
                                                 </a>
                                             </user-login-handler>
                                             {% else %}
-                                                <a data-toggle="modal" href="#login">
-                                                    <i class="mr-1 fa fa-user" aria-hidden="true"></i>
-                                                    <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
-                                                </a>
-                                                <span class="pipe"></span>
-                                                <a href="https://www.blue-berry.eu/{{ lang }}/register">
-                                                    <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
-                                                    <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
-                                                </a>
+                                                <user-login-handler>
+                                                    <a data-toggle="modal">
+                                                        <i class="mr-1 fa fa-user" aria-hidden="true"></i>
+                                                        <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
+                                                    </a>
+                                                    <span class="pipe"></span>
+                                                    <a href="https://www.blue-berry.eu/{{ lang }}/register">
+                                                        <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
+                                                        <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
+                                                    </a>
+                                                </user-login-handler>
                                             {% endif %}
                                         </li>
                                         <li class="list-inline-item dropdown control-languages">
