--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -5,6 +5,8 @@
 {{ component( "Ceres::PageDesign.Components.Popper" ) }}
 {{ component( "Ceres::Customer.Components.ForgotPassword" ) }}
 
+{% set userObjectForTemplate = services.customer.getContact() %}
+
 {% if isShopBuilder %}
     {% include "Ceres::Widgets.WidgetComponents" %}
 {% endif %}
@@ -61,7 +63,7 @@
 
     {% include getPartial('header') %}
 
-    <div id="page-body" class="main">
+    <div id="page-body" class="main  {% if userObjectForTemplate %}user-logged{% else %}user-not-logged{% endif %}">
         {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 or templateLoaddd == 'tpl.password-reset' or templateLoaddd == 'tpl.register' %}
         {% block PageBody %}{% endblock %}
         {% else %}
@@ -69,7 +71,9 @@
         {% endif %}
     </div>
 
-    {% include getPartial('footer') %}
+    {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 %}
+        {% include getPartial('footer') %}
+    {% endif %}
 
     {% block PartialFooter %}{% endblock %}
 
