--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -115,7 +115,7 @@ body>#vue-app, body>#vue-error {
 }
 
 .top-bar {
-    background-color: #ffffff;
+    background-color: #ffffff !important;
 }
 
 @media only screen and (max-width: 768px) {
