--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -24,6 +24,10 @@ body>#vue-error {
 }
 
 .top-bar {
+    background-color: #e3e7eb;
+}
+
+.controls-list .nav-link[aria-expanded="true"] {
     background-color: #ffffff;
 }
 
@@ -32,7 +36,7 @@ body>#vue-error {
 }
 
 .control-user .dropdown .dropdown-menu a {
-    background-color: #ffffff;
+    background-color: #e3e7eb;
 }
 
 .cmp-product-thumb:hover {
