--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -15,7 +15,7 @@
                             {% if userObjectForTemplate %}
                             {% else %}
                             <li class="other-desc-li">
-                                <a data-toggle="modal" href="#login">
+                                <a data-toggle="modal">
                                     <i class="mr-1 fa fa-user" aria-hidden="true"></i>
                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
                                 </a>
