go to register page

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -64,6 +64,7 @@
     {% include getPartial('header') %}
 
     <div id="page-body" class="main  {% if userObjectForTemplate %}user-logged{% else %}user-not-logged{% endif %}">
+        {% set templateLoaddd = templateEvent %}
         {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 or templateLoaddd == 'tpl.password-reset' or templateLoaddd == 'tpl.register' %}
         {% block PageBody %}{% endblock %}
         {% else %}
