--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -14,15 +14,14 @@
                             </li>
                             {% if userObjectForTemplate %}
                             {% else %}
-                            <li class="other-desc-li">
+                            <li class="other-desc-li other-login-bottom">
                                 <user-login-handler>
-                                <a href="#login" data-toggle="modal">
-                                    <i class="mr-1 fa fa-user" aria-hidden="true"></i>
-                                    <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
-                                </a>
+                                    <a href="#login" data-toggle="modal">
+                                        <i class="mr-1 fa fa-user" aria-hidden="true"></i>
+                                        <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
+                                    </a>
                                 </user-login-handler>
                             </li>
-
                             <li class="other-desc-li">
                                 <a href="https://www.blue-berry.eu/{{ lang }}/register">
                                     <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
@@ -30,11 +29,9 @@
                                 </a>
                             </li>
                             <li class="other-desc-li">
-                                <user-login-handler>
                                 <a data-toggle="modal" href="#resetPwd">
                                     <span>{{ trans("Ceres::Template.loginForgotPassword") }}</span>
                                 </a>
-                                </user-login-handler>
                             </li>
 
                             {% endif %}
