--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -4,7 +4,7 @@
 {% set itemData = config("Ceres.item.data") | split(', ') %}
 
 <script type="x/template" id="vue-single-item">
-    <div>
+    <div>aaaabbbb
         <slot :getDataField="getDataField" :getFilteredDataField="getFilteredDataField">
             <div class="single container-max page-content">
                 <div class="row mt-5 position-relative">
