--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -232,8 +232,10 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
 h1.price {
     line-height: 1.5;
 }
+
 .col-20-percent .vat.small.text-muted {
     font-size: 9px;
+    color: #ffffff !important;
 }
 
 .mb-5.custom-properties {
