--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -228,9 +228,9 @@
                         </div>
                     </div>
                 </div>
-
-                {% include "Ceres::PageDesign.Partials.Header.Navigation" %}
-
+                {% if userObjectForTemplate %}
+                    {% include "Ceres::PageDesign.Partials.Header.Navigation" %}
+                {% endif %}
                 <!-- breadcrumb -->
                 {% if not services.template.isHome() and not services.template.isMyAccount() and not services.template.isCheckout() %}
                     {% include "Ceres::PageDesign.Partials.Header.Breadcrumb" %}
