--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -4,7 +4,7 @@ body>#vue-error {
     background-color: #ffffff;
 }
 
-.wrapper-main .navbar {
+.navbar {
     background-color: #ffffff;
     border-top: 1px solid #123479;
     border-bottom: 1px solid #123479;
