update product details  16: 06.05.2020

--- a/resources/views/Item/SingleItemWrapper.twig
+++ b/resources/views/Item/SingleItemWrapper.twig
@@ -122,7 +122,7 @@
     {% elseif shop_builder_category_template_exists() %}
         {# Empty shop builder template is loading #}
     {% else %}
-        {# No item template defined in ShopBuilder => use default template from plugin #}aaabbb
+        {# No item template defined in ShopBuilder => use default template from plugin #}
         {% include "BlueBerry::Item.SingleItemView" %}
     {% endif %}
 
