--- a/resources/views/Item/SingleItemView.twig
+++ b/resources/views/Item/SingleItemView.twig
@@ -1,4 +1,5 @@
-<single-item v-cloak item-data="{{ item | json_data }}"
+{{ component("BlueBerry::Item.Components.SingleItem") }}
+<single-item v-cloak template-override="#other-prod" item-data="{{ item | json_data }}"
              attributes-data="{{ attributes | json_data }}"
              variations="{{ variations | json_data }}"
              :after-key="{{ afterKey | json_encode }}"
